Update minutes spent based on retrospective addition of item to issue; fetch latest personal issues

--- a/personal-issues/1987.md
+++ b/personal-issues/1987.md
@@ -35,6 +35,10 @@ number:	1987
 
 - [x] ~20 minutes: Continue shoe research from yesterday
 
+### Personal practices
+
+- [x] ~10 minutes: Put together doc on shopping errors (including best practices)
+
 ## Other activities
 
 ### One-off conversations
