--- a/personal-issues/1988.md
+++ b/personal-issues/1988.md
@@ -8,7 +8,22 @@ projects:
 milestone:	
 number:	1988
 --
+## Personal projects
+
+### Donations list website (DLW)
+
+- [x] ~2 minutes: Reply to an email message
+
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~1 hour 5 minutes: Eggplant meal prep https://github.com/vipulnaik/diet-exercise-health/commit/98ab2e3566e44713bfc5e3505bdb08a0c7133e12 excluding 20 minutes multiplexed with watching Ninja Nerd videos and excluding multiplexed cleanup time
+- [x] (no separate time tracked as I multiplexed both prep and cleanup with listening to videos): Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/49040e47f86ab0d34678721f7da5f91b01c06294
+
+### Updates tracking and planning
+
+- [x] ~5 minutes: Add Sunday summaries and week summary https://github.com/vipulnaik/daily-updates/commit/eeca9bf47d8487d99c566b591dd1389efb17c91e https://github.com/vipulnaik/daily-updates/commit/8910d3492e8d3f360109d4193d0feee68df35342
 
 ### Clothing
 
@@ -19,4 +34,24 @@ number:	1988
 ### One-off conversations
 
 - [x] ~12 minutes: Exchange a few messages and continue to do some thinking / figuring out in relation to them
+- [x] ~10 minutes: Continue a discussion from yesterday
 
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~30 minutes: Continue watching new content from the neurology playlist (including 20 minutes multiplexed with eggplant meal prep)
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~5 minutes: Finish listening to a video
+- [x] ~1 hour 45 minutes: Start listening to a video
+
+### Language learning
+
+- [x] ~15 minutes: Listen to a Korean language learning video (in Korean)
+- [x] ~5 minutes: Continue listening / relistening to content from the [Kannada sikhen playlist](https://www.youtube.com/playlist?list=PLjR_rtaV4PoSw6otyVdpv9qeJh3oNgjo8)
+
+### Aviation stuff
+
+- [x] ~20 minutes: Watch / listen to a couple of videos
