Add summaries for period of 2025-07-07 to 2025-07-12; fetch latest personal issues

--- a/personal-issues/1995.md
+++ b/personal-issues/1995.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-07-07
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -14,6 +14,14 @@ number:	1995
 
 - [x] ~55 minutes: Eggplant meal prep https://github.com/vipulnaik/diet-exercise-health/commit/7e4395c6d56412266690e0bf00ed4031ebcc0a80 excluding 30 minutes multiplexed with day job and 10 minutes multiplexed with watching Ninja Nerd videos
 
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/90e55feb253496b6c247b98abfebee7331753670
+
+### Laundry
+
+- [x] ~4 minutes: Take care of followup sorting
+
 ## House chores
 
 - [x] ~2 minutes: Take care of a periodic settings refresh
@@ -24,7 +32,7 @@ number:	1995
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~10 minutes so far: Continue watching new content from the neurology playlist (including 10 minutes multiplexed with eggplant meal prep)
+- [x] ~10 minutes: Continue watching new content from the neurology playlist (including 10 minutes multiplexed with eggplant meal prep)
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
