--- a/personal-issues/2001.md
+++ b/personal-issues/2001.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2025-07-13
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,15 +12,28 @@ number:	2001
 
 ### Cooking and food purchases
 
-- [x] ~12 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/edb115ecf2180a6bbe482111091c68e848ab363f cleanup only as prep was multiplexed with listening to a video
+- [x] (no separate time tracked as both prep and cleanup were multiplexed with listening to videos): Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/edb115ecf2180a6bbe482111091c68e848ab363f
+
+### Updates tracking and planning
+
+- [x] ~12 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/77beeb7d64ef4a43c06dc2715cac159e59a0ff7d
 
 ## Other activities
 
+### Periodic conversations
+
+- [x] ~5 minutes: Weekly chat with father
+
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~5 minutes: Continue watching new content from the neurology playlist
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
 - [x] ~1 hour: Finish listening to a video
+- [x] ~50 minutes: Start listening to a video
 
 ### Language learning
 
