Add summaries for period of 2025-07-14 to 2025-07-18; fetch latest personal issues

--- a/personal-issues/2002.md
+++ b/personal-issues/2002.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-07-14
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,10 +8,41 @@ projects:
 milestone:	
 number:	2002
 --
+## Personal chores
+
+### Laundry
+
+- [x] ~20 minutes: Regular laundry (slightly unusual step sequence) excluding clothes sorting that I multiplexed with listening to a video
+
+### Trash and recycling
+
+- [x] ~2 minutes: Take out the trash
+
+### Nutrition processing (with some cross to health research, appointments, recording)
+
+- [x] ~25 minutes: Restructure Makefile and add table for broad food type + nutrient consumption https://github.com/vipulnaik/diet-exercise-health/commit/5cb1dcc41fa7a43ec529d03a3ea0602aa3e9a904
+
+### Updates tracking and planning
+
+- [x] ~4 minutes: Add Sunday summaries and week summary https://github.com/vipulnaik/daily-updates/commit/49c1616d172332038b73e5ddc8cb6d013adb7d57
+
+ ### Time management
+
+- [x] ~10 minutes: Start a doc on long sessions doing complex tasks
+
+### Personal devops
+
+- [x] ~2 minutes: Record disk usage update
+
 ## Other activities
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~5 minutes: Continue watching new content from the neurology playlist
+
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~15 minutes so far: Continue listening to a video
+- [x] ~1 hour 15 minutes: Finish listening to a video
+- [x] ~10 minutes: Start listening to a video
