--- a/personal-issues/2044.md
+++ b/personal-issues/2044.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-08-25
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,6 +13,15 @@ number:	2044
 ### Laundry
 
 - [x] ~23 minutes: Regular laundry (excluding clothes sorting time multiplexed with listening to a video)
+
+### Administrative / travel / bureaucracy
+
+- [x] ~3 minutes: Take followup actions related to an administrative task
+
+### Updates tracking and planning
+
+- [x] ~16 minutes: Add summaries for the week prior to the last one https://github.com/vipulnaik/daily-updates/commit/42af732ce16e27253ab4dd4e3dc7107610d151a1 https://github.com/vipulnaik/daily-updates/commit/3095f0c8ddd35710b1380bdca23f28b7a0294527
+- [x] ~6 minutes: Add summaries for part of last week https://github.com/vipulnaik/daily-updates/commit/6127c6fd0e17d06c2780ede472e6e40daec83952
 
 ## Other activities
 
