Add summaries for week of 2025-08-25 to 2025-08-31; add August 2025 month summary; fetch latest personal issues

--- a/personal-issues/2047.md
+++ b/personal-issues/2047.md
@@ -39,4 +39,4 @@ number:	2047
 
 ### Aviation stuff
 
-- [x] ~40 minutes so far: Listen to and partially watch a video
+- [x] ~40 minutes: Listen to and partially watch a video
