--- a/personal-issues/2074.md
+++ b/personal-issues/2074.md
@@ -1,5 +1,5 @@
 title:	Vipul Wednesday checklist | 2025-09-24
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -19,6 +19,14 @@ number:	2074
 ### Cooking and food purchases
 
 - [x] ~20 minutes: Get groceries from Berkeley Bowl https://github.com/vipulnaik/diet-exercise-health/commit/fc9faf1b1baed145c3302e378e019e20c12bfc0e
+
+### Laundry
+
+- [x] ~23 minutes: Heavy laundry excluding clothes sorting time multiplexed with listening to a video
+
+### Updates tracking and planning
+
+- [x] ~10 minutes: Finish adding updates for a week in the past https://github.com/vipulnaik/daily-updates/commit/92a2a1dbc8f9ea1ecdc72455f61c251b80ea794a (the week summary ended up taking way more time than expected because I had to review what had happened in the week, not being able to rely on memory -- the tracked time of 10 minutes is an underestimate)
 
 ### Administrative / travel / bureaucracy
 
@@ -50,3 +58,7 @@ number:	2074
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
 - [x] ~50 minutes: Finish listening to a video
+
+### AI safety learning
+
+- [x] ~40 minutes: Continue listening to a video
