Pull in a singular/plural fix to a daily update issue

--- a/personal-issues/2051.md
+++ b/personal-issues/2051.md
@@ -12,7 +12,7 @@ number:	2051
 
 ### Devops stuff
 
-- [x] ~6 minute: Do a few periodic backups
+- [x] ~6 minutes: Do a few periodic backups
 
 ### Wikipedia Views
 
