Add summaries for week of 2025-10-13 to 2025-10-19; fetch latest personal issues; fix num_cpc_ltbcs for a couple of days (2025-09-11 and 2025-09-18) that were incorrectly filled (I checked data going back to 2025-08-04)

--- a/personal-issues/2105.md
+++ b/personal-issues/2105.md
@@ -10,6 +10,22 @@ number:	2105
 --
 ## Personal chores
 
+### Updates tracking and planning
+
+- [x] ~16 minutes: Add summaries for a recent week https://github.com/vipulnaik/daily-updates/commit/b2ffd9853bca7810cf9d9dcee146a04cb6425c7e
+
 ### Health research, appointments, recording
 
 - [x] ~10 minutes: Continue ideating on the recent dental cleaning feedback
+
+### Periodic cleaning tasks
+
+- [x] (no separate time tracked as I multiplexed this with listening to stuff): Sweep the bedroom and active use area of the hall
+
+## Other activities
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [ ] ~50 minutes so far: Start listening to a video
