--- a/personal-issues/2099.md
+++ b/personal-issues/2099.md
@@ -21,9 +21,12 @@ number:	2099
 - [x] ~1 hour: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/fdc33116febf82d63a1c3db019c8e7bb03789479
 - [x] ~1 hour 10 minutes: Eggplant meal prep https://github.com/vipulnaik/diet-exercise-health/commit/fdc33116febf82d63a1c3db019c8e7bb03789479 excluding 15 minutes multiplexed with watching Ninja Nerd videos
 
-### Health research, appointments, recording
+### Nutrition data
 
 - [x] ~30 minutes: Fix a few food data entry errors and make associated verification query improvements https://github.com/vipulnaik/diet-exercise-health/compare/e2a87b791e9a6bf7bb752a7a0a548220acef750d...fa8eda15532b7e8f6b265a8c061f6c65dc978e5c
+
+### Health research, appointments, recording
+
 - [x] ~10 minutes: Dig into some nutrition data and document decision to end food pauses https://github.com/vipulnaik/diet-exercise-health/commit/7c13ac27684d92c9cd929d3c5a1991f4004d5e54
 
 ### Slack self-chat logs
