--- a/personal-issues/2108.md
+++ b/personal-issues/2108.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2025-10-28
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,6 +13,14 @@ number:	2108
 ### Cooking and food purchases
 
 - [x] ~8 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/18fc2344e368d1f867b3433ba40742fc9fd6ee73 (all except 5 minutes of prep time and 3 minutes of cleanup time were multiplexed with listening to stuff)
+
+### Laundry
+
+- [x] (no separate time tracked as I multiplexed with listening to stuff): Sort laundry clothes washed yesterday
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/eeede1fae8bbc61ff58ced0426d67d16fd02199e
 
 ### Personal devops
 
