Add summaries for period of 2025-11-10 to 2025-11-12; re-fetch a few personal issues to pull in minor fixes

--- a/personal-issues/2121.md
+++ b/personal-issues/2121.md
@@ -18,7 +18,7 @@ number:	2121
 
 ### Laundry
 
-- [x] ~23 minutes: Regular laundry excluding clothes sorting time multiplexed with listening to stuff
+- [x] ~23 minutes: Regular laundry excluding clothes sorting time deferred to the next day
 
 ### Health research, appointments, recording
 
