--- a/personal-issues/2128.md
+++ b/personal-issues/2128.md
@@ -16,7 +16,7 @@ number:	2128
 
 ### Laundry
 
-- [x] ~23 minutes: Regular laundry (excluding clothes sorting time deferred to tomorrow)
+- [x] ~23 minutes: Regular laundry excluding clothes sorting deferred to the next day
 
 ### Personal practices
 
