--- a/personal-issues/2129.md
+++ b/personal-issues/2129.md
@@ -25,7 +25,7 @@ number:	2129
 ### Laundry
 
 - [x] (no separate time tracked as I multiplexed with listening to stuff): Finish laundry clothes sorting from yesterday's laundry
-- [x] ~23 minutes: Regular laundry (deferred laundry clothes sorting to tomorrow)
+- [x] ~23 minutes: Regular laundry excluding clothes sorting deferred to the next day
 
 ### Trash, compostables, and recycling
 
