Add summaries for period of 2025-11-13 to 2025-11-16; add corresponding week summary; fetch latest personal issues

--- a/personal-issues/2121.md
+++ b/personal-issues/2121.md
@@ -18,7 +18,7 @@ number:	2121
 
 ### Laundry
 
-- [x] ~23 minutes: Regular laundry excluding clothes sorting time deferred to the next day
+- [x] ~23 minutes: Regular laundry excluding clothes sorting deferred to the next day
 
 ### Health research, appointments, recording
 
