--- a/personal-issues/2138.md
+++ b/personal-issues/2138.md
@@ -10,12 +10,39 @@ number:	2138
 --
 ## Personal chores
 
+### Laundry
+
+- [x] ~23 minutes: Regular laundry (excluding clothes sorting time multiplexed with listening to stuff)
+
 ### Stocks
 
 - [x] ~2 minutes: Order new intra-oral mirror as the existing one got damaged by frequent alcohol cleaning (for the new one I should make sure to only clean with water!)
+
+### Updates tracking and planning
+
+- [x] ~16 minutes: Continue backfilling summaries https://github.com/vipulnaik/daily-updates/commit/2e47d780cf6d4789df3a11bc8329fffc520c7c09 https://github.com/vipulnaik/daily-updates/commit/8e789bec9b1754405a5c9fb0c71b370b62ec565d
+
+### Trash, compostables, and recycling
+
+- [x] ~2 minutes: Take out the trash
 
 ## Other activities
 
 ### One-off conversations
 
-- [x] ~5 minutes: Send a few messages
+- [x] ~15 minutes: Send a few messages and take care of followup actions
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~15 minutes: Continue watching new content from the hematology playlist
+- [x] ~5 minutes: Continue watching new content from the oncology playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~25 minutes: Finish listening to a video
+
+### AI safety and implications
+
+- [x] ~55 minutes: Start listening to a video
