Add summaries for period of 2025-11-17 to 2025-11-19; fetch latest personal issues

--- a/personal-issues/2129.md
+++ b/personal-issues/2129.md
@@ -73,7 +73,7 @@ number:	2129
 
 ### AI safety and implications
 
-- [x] ~20 minutes so far: Start listening to a video
+- [x] ~20 minutes: Start listening to a video
 
 ### Language learning
 
