Add summaries for period of 2025-11-20 to 2025-11-23; add corresponding week summary; fetch latest personal issues

--- a/personal-issues/2138.md
+++ b/personal-issues/2138.md
@@ -14,6 +14,12 @@ number:	2138
 
 - [x] ~23 minutes: Regular laundry (excluding clothes sorting time multiplexed with listening to stuff)
 
+### Health research, appointments, recording
+
+#### Unplanned incidents
+
+- [x] ~3 minutes: Record finger cut updates
+
 ### Stocks
 
 - [x] ~2 minutes: Order new intra-oral mirror as the existing one got damaged by frequent alcohol cleaning (for the new one I should make sure to only clean with water!)
