Add summaries for period of 2025-12-15 to 2025-12-18; fetch latest personal issues

--- a/personal-issues/2156.md
+++ b/personal-issues/2156.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-12-15
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,6 +10,39 @@ number:	2156
 --
 ## Personal chores
 
+### Cooking and food purchases
+
+- [x] ~1 hour 15 minutes: Potatoes prep https://github.com/vipulnaik/diet-exercise-health/commit/cdbda524fbf305a188c569b12f858709805243f0 excluding 20 minutes of prep time multiplexed with watching Ninja Nerd, and excluding cleanup time multiplexed with listening to stuff
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/26c08545d12eeeb8f23a9cba22402a51d168f0ec
+
 ### Personal practices
 
 - [x] ~10 minutes: Make a few improvements to within-day trigger-based checklists
+
+### Administrative / travel / bureaucracy
+
+- [x] ~5 minutes: Wrap up an update, document it, and make a few related checklist improvements
+
+## Other activities
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~20 minutes: Continue watching new content from the oncology playlist (all 20 minutes multiplexed with watching Ninja Nerd)
+- [x] ~10 minutes: Continue watching new content from the hematology playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~50 minutes: Start listening to a video
+
+### AI safety and implications
+
+- [x] ~40 minutes: Continue listening to a video
+
+### Aviation, transit, and infrastructure stuff
+
+- [x] ~20 minutes: Listen to (and partly watch) a video
